--- a/src/app/components/modal-product-dados/modal-product-dados.component.html
+++ b/src/app/components/modal-product-dados/modal-product-dados.component.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="col-sm-3 form-group">
-        <label>Valor Total:</label>
+        <label>Preço sugerido:</label>
         <input type="text" readonly required currencyMask class="form-control" name="unitario"
           [(ngModel)]="dados.unitario" #unitario="ngModel" />
       </div>
