--- a/src/app/pages/restricted/layout/entregas/entrega-detalhe/entrega-detalhe.component.html
+++ b/src/app/pages/restricted/layout/entregas/entrega-detalhe/entrega-detalhe.component.html
@@ -6,7 +6,7 @@
         <button type="button" class="btn btn-sm mr-2" [routerLink]="[ '/restricted/entregas' ]">
           <i class="fa fa-arrow-left"></i>
         </button>
-        Detalhes da entrega:
+        Detalhes do Baú:
         <span class="badge badge-success" *ngIf="entregaCurrent.status === 'ok'">Ok</span>
         <span class="badge badge-warning" *ngIf="entregaCurrent.status === 'pendente'">Pendente</span>
       </h4>  
