--- a/src/app/pages/restricted/layout/entregas/entregas.component.html
+++ b/src/app/pages/restricted/layout/entregas/entregas.component.html
@@ -6,7 +6,7 @@
       <div class="row mb-2">
         
         <div class="col-9">
-          <h1 class="m-0">Entregas / Mês {{ today | date:'MM' }}</h1>
+          <h1 class="m-0">Baú / Mês {{ today | date:'MM' }}</h1>
         </div>
         
         <div class="col-3">
