--- a/src/app/pages/restricted/layout/despesas/despesas.component.html
+++ b/src/app/pages/restricted/layout/despesas/despesas.component.html
@@ -95,7 +95,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form #form="ngForm" (ngSubmit)="onSubmit(form)" (keydown.enter)="submit(form)">
+                <form #form="ngForm" (ngSubmit)="onSubmit(form)" (keydown.enter)="onSubmit(form)">
                     <div class="modal-body">
                         <div class="card-body">
                             <div class="form-row">
