--- a/src/app/pages/restricted/layout/entregas/entrega-detalhe/entrega-detalhe.component.html
+++ b/src/app/pages/restricted/layout/entregas/entrega-detalhe/entrega-detalhe.component.html
@@ -7,8 +7,8 @@
           <i class="fa fa-arrow-left"></i>
         </button>
         Detalhes do Baú:
-        <span class="badge badge-success" *ngIf="entregaCurrent.status === 'ok'">Ok</span>
-        <span class="badge badge-warning" *ngIf="entregaCurrent.status === 'pendente'">Pendente</span>
+        <span class="badge badge-success" *ngIf="entregaCurrent.status === 'ok'">Finalizada</span>
+        <span class="badge badge-warning" *ngIf="entregaCurrent.status === 'pendente'">Na rua</span>
       </h4>  
     </div>
   
