--- a/src/app/pages/restricted/layout/entregas/entregas.component.html
+++ b/src/app/pages/restricted/layout/entregas/entregas.component.html
@@ -56,8 +56,8 @@
                     <td>{{ (!item.total_final)? '****':item.total_final | currency: 'R$' }}</td>
                     <td>
                       <div class="d-flex justify-content-center">
-                        <span class="badge badge-success" *ngIf="item.status === 'ok' ">Ok</span>
-                        <span class="badge badge-warning" *ngIf="item.status === 'pendente' ">Pendente</span>
+                        <span class="badge badge-success" *ngIf="item.status === 'ok' ">Finalizada</span>
+                        <span class="badge badge-warning" *ngIf="item.status === 'pendente' ">Na rua</span>
                         <span class="badge badge-primary" *ngIf="!item.status">Aberta</span>
                       </div>
                     </td>
