--- a/src/app/pages/restricted/layout/despesas/despesas.component.html
+++ b/src/app/pages/restricted/layout/despesas/despesas.component.html
@@ -1,34 +1,28 @@
-<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
+    
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
-                <div class="col-sm-6">
+                <div class="col-9">
                     <h1 class="m-0">Despesas</h1>
-                </div><!-- /.col -->
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <!--  
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Dashboard v1</li>
-                        -->
-                    </ol>
-                </div><!-- /.col -->
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
+                </div>
+                <div class="col-3 text-right">
+                    <button class="btn btn-primary btn-md" title="Filtro de Pesquisa" (click)="filterDate()">
+                      <i class="fas fa-search"></i>
+                    </button>           
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- /.content-header -->
 
-    <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
-            <!-- <div class="row text-right">
+            <div class="row text-right">
                 <div class="col-4 col-md-3 ml-auto">
                     <label class="text-danger">Saldo a pagar: </label>
                     <span class="pl-2">{{ saldo | currency: 'R$' }}</span>
                 </div>
-            </div> -->
+            </div>
             <div class="row">
                 <div class="col-12">
                     <div class="card" [ngClass]="{'card-load': loading}">
@@ -50,7 +44,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /.card-header -->
+                        
                         <div class="card-body table-responsive p-0" style="height: 100%;">
                             <table class="table table-hover text-nowrap">
                                 <thead>
@@ -69,15 +63,15 @@
                                 </tbody>
                                 <tbody *ngIf=" despesas.length == 0 ">
                                     <tr class="text-center">
-                                        <td colspan="3">Não há Contas a Pagar no momento</td>
+                                        <td colspan="3">Não há despesas no momento!</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-                        <!-- /.card-body -->
+                        
                         <div class="card-loader" *ngIf="loading"><i class="fas fa-sync-alt anim-rotate"></i></div>
                     </div>
-                  <!-- /.card -->
+                    
                 </div>
             </div>
         </div>
@@ -90,7 +84,7 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Despesa</h4>
+                    <h4 class="modal-title">Registrar despesa</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
