--- a/src/app/pages/restricted/layout/entregas/entregas.component.html
+++ b/src/app/pages/restricted/layout/entregas/entregas.component.html
@@ -51,7 +51,7 @@
                 <tbody *ngFor="let item of dataSource | filter:term">
                   <tr class="text-center">
                     <th scope="row">{{ item.id_entrega }}</th>
-                    <td>{{ item.created_at }}</td>
+                    <td>{{ item.created_at | date : 'dd/MM/yyyy HH:mm:ss' }}</td>
                     <td>{{ (!item.qtd_produtos)? '****':item.qtd_produtos }}</td>
                     <td>{{ (!item.total_final)? '****':item.total_final | currency: 'R$' }}</td>
                     <td>
