--- a/src/app/pages/restricted/layout/sales/sales.component.html
+++ b/src/app/pages/restricted/layout/sales/sales.component.html
@@ -54,7 +54,7 @@
             </div>
             <!-- /.card-header -->
             <div class="card-body table-responsive p-0">
-              <table class="table table-hover text-nowrap">
+              <table class="table table-hover text-nowrap text-center">
                 <thead>
                   <tr>
                     <th scope="col">#ID</th>
@@ -78,11 +78,9 @@
                     <td>{{ (!item.total_final)? '****':item.total_final | currency: 'R$' }}</td>
                     <td>{{ (!item.pago)? '****':item.pago | currency: 'R$' }}</td>
                     <td>
-                      <div class="d-flex justify-content-center">
-                        <span class="badge badge-success" *ngIf="item.status === 'pago' ">Pago</span>
-                        <span class="badge badge-warning" *ngIf="item.status === 'pendente' ">Pendente</span>
-                        <span class="badge badge-primary" *ngIf="!item.status">Aberta</span>
-                      </div>
+                      <span class="badge badge-success" *ngIf="item.status === 'pago' ">Pago</span>
+                      <span class="badge badge-warning" *ngIf="item.status === 'pendente' ">Pendente</span>
+                      <span class="badge badge-primary" *ngIf="!item.status">Aberta</span>
                     </td>
                     <td>
                       <button class="btn btn-primary btn-sm mx-2" title="Editar" (click)="editVenda(item.id_venda)">
