--- a/src/app/pages/restricted/layout/entregas/entregas.component.html
+++ b/src/app/pages/restricted/layout/entregas/entregas.component.html
@@ -8,6 +8,11 @@
         <div class="col-9">
           <h1 class="m-0">Baú</h1>
         </div>
+        <div class="col-3 text-right">
+          <button class="btn btn-primary btn-md" title="Filtro de Pesquisa" (click)="filterDate()">
+            <i class="fas fa-search"></i>
+          </button>           
+        </div>
       </div><!-- /.row -->
     </div><!-- /.container-fluid -->
   </div>
